--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
         <div class="topbar">
           <div class="topbar__quality">
             <svg width="40" height="40">
-              <use class="" href="./images/sprite.svg#quality-badge"></use>
+              <use
+                class="quaity-badge"
+                href="./images/sprite.svg#quality-badge"
+              ></use>
             </svg>
             <a class="topbar__quality-link" href="#">
-              TRUSTED HOSTING PROVIDER SINCE 2009</a
-            >
+              TRUSTED HOSTING PROVIDER SINCE 2009
+            </a>
             <svg width="40" height="40">
-              <use class="" href="./images/sprite.svg#quality-badge"></use>
+              <use class="big-arrow" href="./images/sprite.svg#big-arrow"></use>
             </svg>
           </div>
 
@@ -50,7 +53,7 @@
               <button class="topbar__button topbar__button--lang">
                 <svg width="40" height="40">
                   <use
-                    class="topbar__planet"
+                    class="planet-icon"
                     href="./images/sprite.svg#planet-icon"
                   ></use>
                 </svg>
@@ -71,22 +74,6 @@
           >
 
           <ul class="navbar__list">
-            <li>
-              <a class="navbar__link" href=""
-                >SERVERS<span class="menu-arrow"></span
-              ></a>
-            </li>
-
-            <li>
-              <a class="navbar__link" href=""
-                >VPS<span class="menu-arrow"></span
-              ></a>
-            </li>
-            <li>
-              <a class="navbar__link" href=""
-                >HOSTING<span class="menu-arrow"></span
-              ></a>
-            </li>
             <li>
               <a class="navbar__link" href=""
                 >CLOUD<span class="menu-arrow"></span
@@ -165,6 +152,155 @@
 
         <div class="hero__background-img"></div>
       </section>
+
+      <!-- Prices  -->
+
+      <section class="prices">
+        <div class="container">
+          <div class="prices-container">
+            <ul class="prices-menu">
+              <li class="prices-menu__item">
+                <svg width="40" height="40">
+                  <use
+                    class="quaity-badge"
+                    href="./images/sprite.svg#quality-badge"
+                  ></use>
+                </svg>
+                <div>
+                  <p class="prices-menu__title">DEDICATED SERVERS</p>
+                  <p class="prices-menu__info">
+                    from <span class="prices-menu__price">$99 /month</span>
+                  </p>
+                </div>
+              </li>
+              <li class="prices-menu__item">
+                <svg width="40" height="40">
+                  <use
+                    class="quaity-badge"
+                    href="./images/sprite.svg#quality-badge"
+                  ></use>
+                </svg>
+                <div>
+                  <p class="prices-menu__title">DEDICATED SERVERS</p>
+                  <p class="prices-menu__info">
+                    from <span class="prices-menu__price">$99 /month</span>
+                  </p>
+                </div>
+              </li>
+              <li class="prices-menu__item">
+                <svg width="40" height="40">
+                  <use
+                    class="quaity-badge"
+                    href="./images/sprite.svg#quality-badge"
+                  ></use>
+                </svg>
+                <div>
+                  <p class="prices-menu__title">DEDICATED SERVERS</p>
+                  <p class="prices-menu__info">
+                    from <span class="prices-menu__price">$99 /month</span>
+                  </p>
+                </div>
+              </li>
+              <li class="prices-menu__item">
+                <svg width="40" height="40">
+                  <use
+                    class="quaity-badge"
+                    href="./images/sprite.svg#quality-badge"
+                  ></use>
+                </svg>
+                <div>
+                  <p class="prices-menu__title">DEDICATED SERVERS</p>
+                  <p class="prices-menu__info">
+                    from <span class="prices-menu__price">$99 /month</span>
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Faq  -->
+
+      <section class="faq">
+        <div class="section container">
+          <h2 class="section-title">faq</h2>
+
+          <div class="accordion">
+            <div class="accordion__item">
+              <button class="accordion__btn" type="button">
+                <h3 class="accordion__title">PRIVACY DRIVEN</h3>
+                <svg class="accordion__arrow" width="40px" height="40px">
+                  <use
+                    class="accordion__svg"
+                    href="/images/sprite.svg#big-arrow"
+                  ></use>
+                </svg>
+              </button>
+
+              <p class="accordion__info">
+                Privacy is fundamental human right. Best way to secure private
+                data is avoid sharing it online! We will never ask for any
+                privacy related data, just enter valid e-mail for communication.
+              </p>
+            </div>
+
+            <div class="accordion__item">
+              <button class="accordion__btn" type="button">
+                <h3 class="accordion__title">PRIVACY DRIVEN</h3>
+                <svg class="accordion__arrow" width="40px" height="40px">
+                  <use
+                    class="accordion__svg"
+                    href="/images/sprite.svg#big-arrow"
+                  ></use>
+                </svg>
+              </button>
+
+              <p class="accordion__info">
+                Privacy is fundamental human right. Best way to secure private
+                data is avoid sharing it online! We will never ask for any
+                privacy related data, just enter valid e-mail for communication.
+              </p>
+            </div>
+
+            <div class="accordion__item">
+              <button class="accordion__btn" type="button">
+                <h3 class="accordion__title">PRIVACY DRIVEN</h3>
+                <svg class="accordion__arrow" width="40px" height="40px">
+                  <use
+                    class="accordion__svg"
+                    href="/images/sprite.svg#big-arrow"
+                  ></use>
+                </svg>
+              </button>
+
+              <p class="accordion__info">
+                Privacy is fundamental human right. Best way to secure private
+                data is avoid sharing it online! We will never ask for any
+                privacy related data, just enter valid e-mail for communication.
+              </p>
+            </div>
+
+            <div class="accordion__item">
+              <button class="accordion__btn" type="button">
+                <h3 class="accordion__title">PRIVACY DRIVEN</h3>
+                <svg class="accordion__arrow" width="40px" height="40px">
+                  <use
+                    class="accordion__svg"
+                    href="/images/sprite.svg#big-arrow"
+                  ></use>
+                </svg>
+              </button>
+
+              <p class="accordion__info">
+                Privacy is fundamental human right. Best way to secure private
+                data is avoid sharing it online! We will never ask for any
+                privacy related data, just enter valid e-mail for communication.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer  -->
@@ -241,5 +377,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/dropdown.js"></script>
   </body>
 </html>
