--- a/index.html
+++ b/index.html
@@ -74,30 +74,55 @@
           >
 
           <ul class="navbar__list">
-            <li>
-              <a class="navbar__link" href=""
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
                 >CLOUD<span class="menu-arrow"></span
               ></a>
+              <ul class="navbar__dropdown">
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+              </ul>
             </li>
-            <li>
-              <a class="navbar__link" href=""
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
                 >SERVICES<span class="menu-arrow"></span
               ></a>
+              <ul class="navbar__dropdown">
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+              </ul>
             </li>
-            <li>
-              <a class="navbar__link" href=""
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
                 >SOLUTIONS<span class="menu-arrow"></span
               ></a>
+              <ul class="navbar__dropdown">
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+              </ul>
             </li>
-            <li>
-              <a class="navbar__link" href=""
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
                 >COMPANY<span class="menu-arrow"></span
               ></a>
+              <ul class="navbar__dropdown">
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+              </ul>
             </li>
-            <li>
-              <a class="navbar__link" href=""
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
                 >RESOURCES<span class="menu-arrow"></span
               ></a>
+              <ul class="navbar__dropdown">
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+                <li><a href="#">dropdown</a></li>
+              </ul>
             </li>
           </ul>
         </div>
