--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
       <div class="container">
         <div class="topbar">
           <div class="topbar__quality">
-            <svg width="40" height="40">
-              <use
-                class="quaity-badge"
-                href="./images/sprite.svg#quality-badge"
-              ></use>
+            <svg class="quality-badge" width="40" height="40">
+              <use href="./images/sprite.svg#quality-badge"></use>
             </svg>
             <a class="topbar__quality-link" href="#">
               TRUSTED HOSTING PROVIDER SINCE 2009
@@ -40,7 +37,7 @@
           <ul class="topbar__list">
             <li class="topbar__item">
               <button class="topbar__button topbar__button--white">
-                CONTACT US <span class="menu-arrow"></span>
+                CONTACT US<span class="menu-arrow"></span>
               </button>
             </li>
             <li class="topbar__item">
@@ -76,52 +73,385 @@
           <ul class="navbar__list">
             <li class="navbar__item">
               <a class="navbar__link" href="#"
-                >CLOUD<span class="menu-arrow"></span
+                >Servers<span class="menu-arrow"></span
               ></a>
-              <ul class="navbar__dropdown">
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
               </ul>
             </li>
+
             <li class="navbar__item">
               <a class="navbar__link" href="#"
-                >SERVICES<span class="menu-arrow"></span
+                >Servers<span class="menu-arrow"></span
               ></a>
-              <ul class="navbar__dropdown">
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
               </ul>
             </li>
+
             <li class="navbar__item">
               <a class="navbar__link" href="#"
-                >SOLUTIONS<span class="menu-arrow"></span
+                >Servers<span class="menu-arrow"></span
               ></a>
-              <ul class="navbar__dropdown">
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
               </ul>
             </li>
+
             <li class="navbar__item">
               <a class="navbar__link" href="#"
-                >COMPANY<span class="menu-arrow"></span
+                >Servers<span class="menu-arrow"></span
               ></a>
-              <ul class="navbar__dropdown">
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
               </ul>
             </li>
+
             <li class="navbar__item">
               <a class="navbar__link" href="#"
-                >RESOURCES<span class="menu-arrow"></span
+                >Servers<span class="menu-arrow"></span
               ></a>
-              <ul class="navbar__dropdown">
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
-                <li><a href="#">dropdown</a></li>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
+                >Servers<span class="menu-arrow"></span
+              ></a>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
+                >Servers<span class="menu-arrow"></span
+              ></a>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="navbar__item">
+              <a class="navbar__link" href="#"
+                >Servers<span class="menu-arrow"></span
+              ></a>
+              <ul class="navbar-dropdown">
+                <li>
+                  <a class="navbar-dropdown__link" href="#">OFFSHORE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE NETHERLANDS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SERVERS IN THE USA</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">10 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">20 GBPS SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >STREAMING SERVERS</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">GPU SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >NVME DEDICATED SERVER</a
+                  >
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#">STORAGE SERVERS</a>
+                </li>
+                <li>
+                  <a class="navbar-dropdown__link" href="#"
+                    >SSD STORAGE SERVERS</a
+                  >
+                </li>
               </ul>
             </li>
           </ul>
