--- a/index.html
+++ b/index.html
@@ -434,50 +434,101 @@
     <!-- Hero -->
 
     <main>
-      <section class="hero">
+      <section class="hero o-hidden">
         <div class="hero__background-img"></div>
 
-        <div class="container section hero__content">
-          <h1 class="hero__title">
-            Quality has a name - Vsys Host, the top-notch hosting provider
-          </h1>
+        <!-- <button id="left">left</button>
+        <button id="right">right</button> -->
 
-          <div class="hero__box">
-            <div class="hero__info">
-              <p class="hero__description">
-                VSYS Host operates in Kyiv, Seattle, and Amsterdam's top-tier
-                data centers. 99.9% uptime guaranteed, DDoS protection, low
-                latency, and packet loss. Shared hosting, VPS, dedicated server,
-                cloud solution, GPU, or streaming server, significant data
-                storage, 10Gbps, or bare metal beast - crypto payments are
-                welcome.
-                <br /><br />
-                Ticket response time: <span class="text--blue">15 minutes</span
-                ><br />
-                Uptime of our servers: <span class="text--blue">99.9% </span
-                ><br />Payments:
-              </p>
+        <ul class="slider-content">
+          <li class="fs-0">
+            <div class="container section hero__content">
+              <h1 class="hero__title">
+                Quality has a name - Vsys Host, the top-notch hosting provider
+              </h1>
 
-              <div class="hero__buttons">
-                <a class="hero__button hero__button--blue" href=""
-                  >CHECK PRICING FOR USA DEDICATED SERVER</a
-                >
-                <button class="hero__button hero__button--blue">
-                  CONTACT SALES TEAM
-                </button>
+              <div class="hero__box">
+                <div class="hero__info">
+                  <p class="hero__description">
+                    VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                    top-tier data centers. 99.9% uptime guaranteed, DDoS
+                    protection, low latency, and packet loss. Shared hosting,
+                    VPS, dedicated server, cloud solution, GPU, or streaming
+                    server, significant data storage, 10Gbps, or bare metal
+                    beast - crypto payments are welcome.
+                    <br /><br />
+                    Ticket response time:
+                    <span class="text--blue">15 minutes</span><br />
+                    Uptime of our servers: <span class="text--blue">99.9% </span
+                    ><br />Payments:
+                  </p>
+
+                  <div class="hero__buttons">
+                    <a class="hero__button hero__button--blue" href=""
+                      >CHECK PRICING FOR USA DEDICATED SERVER</a
+                    >
+                    <button class="hero__button hero__button--blue">
+                      CONTACT SALES TEAM
+                    </button>
+                  </div>
+                </div>
+
+                <div class="hero__image">
+                  <img
+                    width="222px"
+                    class="hero__svg"
+                    src="./images/balancing-blue.svg"
+                    alt="Server illustration"
+                  />
+                </div>
               </div>
             </div>
+          </li>
 
-            <div class="hero__image">
-              <img
-                width="222px"
-                class="hero__svg"
-                src="./images/balancing-blue.svg"
-                alt="Server illustration"
-              />
+          <!-- <li class="fs-0">
+            <div class="container section hero__content">
+              <h1 class="hero__title">
+                Quality has a name - Vsys Host, the top-notch hosting provider
+              </h1>
+
+              <div class="hero__box">
+                <div class="hero__info">
+                  <p class="hero__description">
+                    VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                    top-tier data centers. 99.9% uptime guaranteed, DDoS
+                    protection, low latency, and packet loss. Shared hosting,
+                    VPS, dedicated server, cloud solution, GPU, or streaming
+                    server, significant data storage, 10Gbps, or bare metal
+                    beast - crypto payments are welcome.
+                    <br /><br />
+                    Ticket response time:
+                    <span class="text--blue">15 minutes</span><br />
+                    Uptime of our servers: <span class="text--blue">99.9% </span
+                    ><br />Payments:
+                  </p>
+
+                  <div class="hero__buttons">
+                    <a class="hero__button hero__button--blue" href=""
+                      >CHECK PRICING FOR USA DEDICATED SERVER</a
+                    >
+                    <button class="hero__button hero__button--blue">
+                      CONTACT SALES TEAM
+                    </button>
+                  </div>
+                </div>
+
+                <div class="hero__image">
+                  <img
+                    width="222px"
+                    class="hero__svg"
+                    src="./images/balancing-blue.svg"
+                    alt="Server illustration"
+                  />
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
+          </li> -->
+        </ul>
       </section>
 
       <!-- Prices  -->
@@ -815,5 +866,6 @@
     </footer>
 
     <script src="./js/dropdown.js"></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
