--- a/index.html
+++ b/index.html
@@ -145,18 +145,8 @@
             <span class="vsys-logo__virtual">virtual </span>systems</a
           >
 
-          <button
-            class="menu-button"
-            type="button"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-            data-menu-button
-          >
-            <svg
-              width="40px"
-              height="40px"
-              aria-label="Переключатель мобильного меню"
-            >
+          <button class="menu-button" type="button" data-menu-button>
+            <svg width="40px" height="40px">
               <use
                 class="icon-close"
                 href="images/sprite.svg#header-menu-close-icon"
@@ -827,12 +817,16 @@
                 </li>
                 <div>
                   <li>
-                    <a class="footer-contacts__phone" href="#"
+                    <a class="footer-contacts__phone" href="tel:+380445915679"
                       >+38 (044) 591-56-79</a
                     >
                   </li>
                   <li>
-                    <a class="footer-contacts__mail" href="#">info@v-sys.org</a>
+                    <a
+                      class="footer-contacts__mail"
+                      href="mailto:info@v-sys.org"
+                      >info@v-sys.org</a
+                    >
                   </li>
                 </div>
               </ul>
