--- a/index.html
+++ b/index.html
@@ -607,8 +607,9 @@
 
             <div class="swiper-pagination"></div>
 
+            <!-- 
             <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-next"></div> -->
           </div>
         </div>
       </section>
