--- a/random-sections.html
+++ b/random-sections.html
@@ -645,7 +645,7 @@
             <img
               width="300px"
               class="nvme-ssd__image"
-              src="../images/nvme-ssd_illustration.svg"
+              src="./images/nvme-ssd_illustration.svg"
               alt="nvme-ssd__illustration"
             />
           </div>
